index.html 버튼 내용 수정
다음 -> 로그 유형 선택

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <label for="log-file">로그 파일 첨부</label>
             <input type="file" id="log-file" name="log-file" accept=".csv" onchange="displayFileName()">
             <div id="file-name"></div>
-            <button type="button" onclick="uploadFile()">다음</button>
+            <button type="button" onclick="uploadFile()">로그 유형 선택</button>
         </form>
     </div>
     <script src="scripts.js"></script>
