--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
             <button type="button" onclick="uploadFile()">로그 유형 선택</button>
         </form>
     </div>
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
